# Kurdknight_comfycheck

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  __init__.py  comfydoctor.bat  doctor.py  nodes.py  pyproject.toml  requirements.txt  system_check.py  system_viz.py
.github/workflows/: publish.yml
comfydoctor/: __init__.py  __main__.py  api.py  cli.py  custom_nodes.py  env.py  facts.py  gpu.py  inventory.py  models.py  remedy.py  report.py  runner.py  scan.py  shipped.py
comfydoctor/rules/: __init__.py  attention.py  node_health.py  opportunities.py  packages.py  system.py  torch_stack.py
js/: system_check.js
tests/: conftest.py  test_false_positive_audit.py  test_healthy_machines_scan_clean.py  test_rules.py  test_safe_advice.py  test_shipped_versions.py  test_torch_pairing.py
web/: comfydoctor.css  comfydoctor.js
