[project]
# This name MUST stay exactly "Kurdknight_comfycheck". It is the existing id of
# the node record in the Comfy Registry (created 2025-03-12, attached to the
# kurdknight publisher). Renaming it here would mint a NEW registry node and
# orphan the existing one along with its stars and its Manager listing.
name = "Kurdknight_comfycheck"
version = "2.0.0"
description = "ComfyDoctor - finds what is actually broken in your ComfyUI Python environment (version conflicts, CPU-only torch, failed custom nodes) and gives you a one-click fix. Includes a CLI that still works when ComfyUI won't start."
license = { file = "LICENSE" }
requires-python = ">=3.9"
readme = "README.md"
keywords = ["comfyui", "diagnostics", "troubleshooting", "dependencies", "cuda", "repair"]
classifiers = [
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/Kurdknight/Kurdknight_comfycheck"
"Bug Tracker" = "https://github.com/Kurdknight/Kurdknight_comfycheck/issues"

[tool.comfy]
PublisherId = "kurdknight"
DisplayName = "ComfyDoctor"
Icon = "https://raw.githubusercontent.com/Kurdknight/Kurdknight_comfycheck/main/icon.png"
requires-comfyui = ">=1.16.0"
